add first question page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <p id = "high-scores-link" href="#view-high-score">View High Score</p>
+        <button id = "high-scores-btn" href="#view-high-score">View High Score</button>
         <div id = "countdown">Time: 0</div>
     </header>
 
