add countdown timer begins with start btn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    
     <!-- <main id ="page-content" class ="page-content"> -->
         <!-- <section id = "welcome-page" class = "welcome-page">
             <h1 id="title-question" class = "title-question"></h1>
@@ -32,7 +31,7 @@
             <div id = "answer-result" class ="answer-result">
                 <h2 id = "result" class ="result"></h2>
             </div>
-        </section>
+        </section>'${timeSecond}';'${timeSecond}';
 
         <section id ="all-done" 
             <h1> All Done!
